--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/76dfb23ec7.js" crossorigin="anonymous"></script>
     <title>B.J November Tours</title>
   </head>
   <body>
