--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Benjamin J November Tours & Airport Shuttle Services" />
+    <meta name="keywords" content="Airport, Shuttle, Tours, Events, Functions, Travel, Taxi" />
     <script src="https://kit.fontawesome.com/76dfb23ec7.js" crossorigin="anonymous"></script>
     <title>B.J November Charter Service</title>
   </head>
