Updated form with more fields, added indicators for required fields

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="description" content="Benjamin J November Tours & Airport Shuttle Services" />
     <meta name="keywords" content="Airport, Shuttle, Tours, Events, Functions, Travel, Taxi" />
     <script src="https://kit.fontawesome.com/76dfb23ec7.js" crossorigin="anonymous"></script>
-    <title>B.J November Charter Service</title>
+    <title>B.J November Shuttle Service</title>
   </head>
   <body>
     <form name="ask-question" netlify method="post" data-netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
-      <input type="email" name="email" />
+      <input type="text" name="subject" />
+      <input type="text" name="email" />
+      <input type="text" name="phone" />
+
       <textarea name="message"></textarea>
     </form>
     <noscript>
