Added Google Analytics to monitor website usage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YLFVGBGEVY"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-YLFVGBGEVY')
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,8 +31,8 @@
     </form>
     <noscript>
       <strong
-        >We're sorry but DRN SOFTWARE doesn't work properly without JavaScript enabled. Please
-        enable it to continue.</strong
+        >We're sorry but BJN Shuttle Services doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
